[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-check-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — health-check-ai-mcp"
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "health-check", "uptime-monitoring", "service-monitoring", "endpoint-health"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/health-check-ai-mcp"
Documentation = "https://meok.ai/docs/health-check-ai-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/health-check-ai-mcp/issues"
